Fixed process streaming, added 'reset' command